fix: monaco editor overflow styling

--- a/studio/src/app/modals/editor/app-code-editor/app-code-editor.scss
+++ b/studio/src/app/modals/editor/app-code-editor/app-code-editor.scss
@@ -1,6 +1,11 @@
 app-code-editor {
   @import "../../../../global/theme/editor/editor-modal";
 
+  main {
+    height: 100%;
+    background: var(--ion-color-light);
+  }
+
   deckgo-monaco-editor {
     border: 1px solid #dedede;
     display: block;
